--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,16 @@
 
 body{
     background: #333;
-    margin-top: 0;
-    text-align: left;
+    max-width: max-content;
+    margin: auto;
 }
 #main{
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
     background-color: #f7f7f7;
-    text-align: left;
-    color: #173b75;
     box-sizing: border-box;
-    font: inherit;
     display: inline-block;
     padding-right: 5px;
     padding-left: 5px;
-    margin-right: 90px;
-    margin-left: 90px;
     width: 1170px;
-   
-
-
 }
 .banner{
 
